[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wano"
version = "0.1.0"
description = "Local-first compute orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.0.0",
    "zeroconf>=0.60.0",
    "nvidia-ml-py>=12.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "pre-commit>=4.5.1",
    "pytest>=7.4.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]
macos = [
    "macmon-python>=0.1.0",
]

[project.scripts]
wano = "wano.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["wano*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"wano/cli/main.py" = ["ARG001", "ARG002"]
"wano/control/scheduler.py" = ["ARG002", "B007"]
"wano/control/ray_manager.py" = ["ARG002"]
"wano/execution/runner.py" = ["ARG001"]
"tests/**/*.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["wano"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["ray.*", "pynvml.*", "torch.*", "zeroconf.*", "psutil.*"]
ignore_missing_imports = true
